--- a/Api-Automation/test-output/index.html
+++ b/Api-Automation/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Get" class="method navigator-link" hash-for-method="usingRequestSpecification">usingRequestSpecification</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Get" class="method navigator-link" hash-for-method="validateUserEmail">validateUserEmail</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Delete" class="method navigator-link" hash-for-method="deleteWithHeaders">deleteWithHeaders</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">rest_api.Get</span>
+              <span class="class-name">rest_api.Delete</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="usingRequestSpecification">
-                  </a> <!-- usingRequestSpecification -->
-                  <span class="method-name">usingRequestSpecification</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateUserEmail">
-                  </a> <!-- validateUserEmail -->
-                  <span class="method-name">validateUserEmail</span>
+                  <a name="deleteWithHeaders">
+                  </a> <!-- deleteWithHeaders -->
+                  <span class="method-name">deleteWithHeaders</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--1324616658/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-1173546439/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;rest_api.Get&quot;/&gt;
+      &lt;class name=&quot;rest_api.Delete&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,15 +185,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'usingRequestSpecification')
-data.setCell(0, 2, 'rest_api.Get')
-data.setCell(0, 3, 1188);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateUserEmail')
-data.setCell(1, 2, 'rest_api.Get')
-data.setCell(1, 3, 456);
+data.setCell(0, 1, 'deleteWithHeaders')
+data.setCell(0, 2, 'rest_api.Delete')
+data.setCell(0, 3, 1532);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -225,18 +209,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">rest_api.Get</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">getUsers</span>
-                <br/>
-                <span class="ignored-method-name">getSingleUser</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -245,14 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">rest_api.Get</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">rest_api.Delete</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">usingRequestSpecification</span>
+                <span class="method-name">deleteWithHeaders</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">validateUserEmail</span>
-                <span class="method-start">1191 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
