--- a/Api-Automation/test-output/index.html
+++ b/Api-Automation/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Delete" class="method navigator-link" hash-for-method="deleteWithHeaders">deleteWithHeaders</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Put" class="method navigator-link" hash-for-method="putUser">putUser</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="rest_api.Put" class="method navigator-link" hash-for-method="putUsingJSONObject">putUsingJSONObject</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">rest_api.Delete</span>
+              <span class="class-name">rest_api.Put</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="deleteWithHeaders">
-                  </a> <!-- deleteWithHeaders -->
-                  <span class="method-name">deleteWithHeaders</span>
+                  <a name="putUser">
+                  </a> <!-- putUser -->
+                  <span class="method-name">putUser</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="putUsingJSONObject">
+                  </a> <!-- putUsingJSONObject -->
+                  <span class="method-name">putUsingJSONObject</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse-1173546439/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--2076087991/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;rest_api.Delete&quot;/&gt;
+      &lt;class name=&quot;rest_api.Put&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'deleteWithHeaders')
-data.setCell(0, 2, 'rest_api.Delete')
-data.setCell(0, 3, 1532);
+data.setCell(0, 1, 'putUser')
+data.setCell(0, 2, 'rest_api.Put')
+data.setCell(0, 3, 1738);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'putUsingJSONObject')
+data.setCell(1, 2, 'rest_api.Put')
+data.setCell(1, 3, 407);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,10 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">rest_api.Delete</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">rest_api.Put</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">deleteWithHeaders</span>
+                <span class="method-name">putUser</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">putUsingJSONObject</span>
+                <span class="method-start">1741 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
